opam-version: "2.0"
synopsis: "A generic graph library for OCaml"
description: "Provides both graph data structures and graph algorithms"
maintainer: ["jean-christophe.filliatre@cnrs.fr"]
authors: ["Sylvain Conchon" "Jean-Christophe Filliâtre" "Julien Signoles"]
license: "LGPL-2.1-only"
tags: [
  "graph"
  "library"
  "algorithms"
  "directed graph"
  "vertice"
  "edge"
  "persistent"
  "imperative"
]
homepage: "https://github.com/backtracking/ocamlgraph/"
doc: "https://backtracking.github.io/ocamlgraph"
bug-reports: "https://github.com/backtracking/ocamlgraph/issues/new"
depends: [
  "ocaml" {>= "4.08.0"}
  "dune" {>= "2.0"}
  "graphics" {with-test}
]
build: [
  ["dune" "subst"] {dev}
  [
    "dune"
    "build"
    "-p"
    name
    "-j"
    jobs
    "@install"
    "@runtest" {with-test}
    "@doc" {with-doc}
  ]
]
dev-repo: "git+https://github.com/backtracking/ocamlgraph.git"
